commit al master del blogpost en su version mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,10 +1,18 @@
 <html>
-    <head>
+
+<head>
     <title>Titulo del post</title>
-    <link rel="stylesheet"  href="css/estilos.css" />
-   </head>
+    <link rel="stylesheet" href="css/estilos.css" />
+</head>
+
 <body>
-    <h1>Aqui vamos a hacer nuestro blog </h1>
-    <p>Y este es el parrafo de inicio</p>
+    <div id="container">
+        <div id="post">
+            <h1>titulo atractivo e interesante del post </h1>
+            <p>parrao donde vamos a explicar las cosas que podemos hacer cn las ramas</p>
+        </div>
+    </div>
+
 </body>
+
 </html>
