--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,9 @@
 
 <body>
     <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
         <div id="post">
             <h1>titulo atractivo e interesante del post </h1>
             <p>parrao donde vamos a explicar las cosas que podemos hacer cn las ramas</p>
