agregado el contenido adicional del blog y agregando una nueva tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,8 +8,10 @@
 <body>
     <div id="container">
         <div id="post">
-            <h1>titulo atractivo e interesante del post </h1>
-            <p>parrao donde vamos a explicar las cosas que podemos hacer cn las ramas</p>
+            <h1>titulo de este post master </h1>
+            <p>vamos a ver que pasa si modificamos la rama master cuando la rama cabecera esta ya modificada </p>
+            <p>Vamos a ver que pasa  </p>
+
         </div>
     </div>
 
