--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,8 @@
         <div id="post">
             <h1>titulo atractivo e interesante del post </h1>
             <p>parrao donde vamos a explicar las cosas que podemos hacer cn las ramas</p>
+            <p>Aprendiendo github</p>
+
         </div>
     </div>
 </body>
