Cabecera footer terminada

--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,10 @@
             <p>Aprendiendo github</p>
 
         </div>
+    <div id="footer">
+
+        Hecho con amor en platzi :)
+    </div>
     </div>
 </body>
 
